appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: shared/OpenModuleFromFreshApp.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeParkingModuleButton
- runFlow:
    file: parking/shared/LoginToParking.yaml
- runFlow:
    file: parking/shared/SelectPermit.yaml
    env:
      PERMIT: 'Kraskaart.*'
- scrollUntilVisible:
    element:
      id: ParkingPermitBalanceMoneyAddButton
- tapOn:
    id: ParkingPermitBalanceMoneyAddButton
- tapOn:
    id: ParkingChooseAmountButton
- tapOn:
    id: ParkingSessionAmountBottomSheetContentRadioGroup2.5RadioButtonPhrase
- tapOn:
    id: ParkingSessionAmountBottomSheetContentDoneButton
- tapOn:
    id: ParkingIncreaseBalanceExternalLinkButton
- tapOn:
    text: Open
    index: 1
    optional: true
- assertVisible:
    id: ParkingIncreaseBalanceSuccessAlert
