appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: parking/shared/InitStartSession.yaml
    env:
      PERMIT: 'Kraskaart.*'
      REPORT_CODE: __PARKING_ACCOUNT_KRASKAART_REPORT_CODE__
      PIN_CODE: __PARKING_ACCOUNT_KRASKAART_PIN_CODE__
- tapOn:
    id: 'ParkingChooseLicensePlateButton'
- waitForAnimationToEnd
- tapOn:
    id: ParkingAddLicensePlateFormLicensePlateInputFieldInput
- inputText: 'ABC123'
- pressKey: Enter
- tapOn:
    id: 'ParkingSessionAddLicensePlateSubmitButton'
- runFlow:
    file: parking/shared/ChooseEndTimeSpinner.yaml
- runFlow:
    file: parking/shared/ChoosePaymentZone.yaml
- assertVisible:
    id: 'ParkingChooseLicensePlateTitle'
- assertVisible:
    id: 'ParkingCostTitle'
- scrollUntilVisible:
    element:
      text: 'Bevestig parkeersessie'
- tapOn: 'Bevestig parkeersessie'
- tapOn:
    id: 'ParkingActiveSessionNavigationButton'
- tapOn:
    id: 'ParkingSessionDetailsStopButton'
- assertVisible: 'Annuleren'
- tapOn:
    text: Stoppen
    index: 0
- assertVisible: 'Start parkeersessie'
