appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: shared/OpenModuleFromFreshApp.yaml
    env:
      ENVIRONMENT: Test
      MODULE: HomeParkingModuleButton
- runFlow:
    file: parking/shared/LoginToParking.yaml
    env:
      REPORT_CODE: '__PARKING_ACCOUNT_KRASKAART_REPORT_CODE__'
      PIN_CODE: '__PARKING_ACCOUNT_KRASKAART_PIN_CODE__'
- runFlow:
    file: parking/shared/SelectPermit.yaml
    env:
      PERMIT_NAME: 'Kraskaart.*'
- scrollUntilVisible:
    element:
      id: ParkingPermitBalanceMoneyAddButton
- tapOn:
    id: ParkingPermitBalanceMoneyAddButton
- tapOn:
    id: ParkingChooseAmountButton
- tapOn:
    id: ParkingSessionAmountBottomSheetContentRadioGroup2.5RadioButtonPhrase
- tapOn:
    id: ParkingSessionAmountBottomSheetContentDoneButton
- tapOn:
    id: ParkingIncreaseBalanceExternalLinkButton
- runFlow:
    file: ../../../shared/OpenAppFromDeeplink.yaml
    when:
      platform: iOS
- assertVisible:
    id: ParkingIncreaseBalanceSuccessAlert
- tapOn:
    id: ParkingIncreaseBalanceSuccessAlertCloseIcon
