appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runScript: parking/scripts/generateRandomLicensePlate.js
- runFlow:
    file: parking/shared/InitStartSession.yaml
    env:
      PERMIT_NAME: 'Op bezoek.*'
      REPORT_CODE: __PARKING_ACCOUNT_VISITOR_REPORT_CODE__
      PIN_CODE: __PARKING_ACCOUNT_VISITOR_PIN_CODE__
- tapOn:
    id: ParkingGoToStartSessionKraskaartvergunningButton
- tapOn:
    id: ParkingVisitorLicensePlateInputFieldInput
- inputText: ${LICENSE_PLATE}
- pressKey: Enter
- runFlow:
    file: ../../shared/ChooseEndTimeSpinner.yaml
- runFlow:
    file: ../../shared/ChoosePaymentZone.yaml
- scrollUntilVisible:
    element:
      id: ParkingStartSessionKraskaartvergunningButton
- tapOn:
    id: ParkingStartSessionKraskaartvergunningButton
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- runFlow:
    file: ../../../shared/OpenAppFromDeeplink.yaml
    when:
      platform: iOS
- assertVisible:
    id: ParkingStartSessionSuccessAlertWrapper
- tapOn:
    id: ParkingStartSessionSuccessAlertCloseIcon
