appId: nl.amsterdam.app.dev
---
- tapOn:
    id: 'ParkingChooseEndTimeButton'
- waitForAnimationToEnd
- swipe:
    start: 45%, 80%
    end: 45%, 70%
- tapOn:
    id: 'ParkingSessionEndTimeBottomSheetContentDoneButton'
