appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ParkingChooseLicensePlateButton
- tapOn:
    id: ParkingAddLicensePlateFormLicensePlateInputFieldInput
- inputText: TEST1
- tapOn:
    id: ParkingSessionAddLicensePlateSubmitButton
- tapOn:
    id: ParkingChooseParkingMachineButton
- tapOn:
    id: ParkingSessionUseFavoriteMachineButton
- runFlow: './ChooseEndTimeScrollWheel.yaml'
- scrollUntilVisible:
    element:
      id: ParkingStartSession.*Button
- tapOn:
    id: ParkingStartSession.*Button
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- assertVisible:
    id: 'ParkingStartSessionSuccessAlert'
- tapOn:
    id: ParkingStartSessionSuccessAlertCloseIcon
