appId: nl.amsterdam.app.dev
---
- tapOn:
    text: Amsterdam Test
    optional: true
- tapOn:
    text: /Altijd|Always/
    optional: true
- tapOn:
    text: Open
    optional: true
