appId: nl.amsterdam.app.dev
---
- tapOn:
    text: 'Allow|Sta toe'
    optional: true
- tapOn:
    id: 'OnboardingCloseIcon'
    optional: true
- tapOn:
    id: 'HeaderEnvironmentIcon'
- tapOn:
    id: 'HomeEnvironmentSelector${ENVIRONMENT}Button'
- tapOn:
    id: 'HeaderBackIcon'
- tapOn:
    id: ${MODULE}
