appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: ../shared/CloseOnboarding.yaml
- tapOn:
    id: 'HeaderEnvironmentIcon'
- tapOn:
    id: 'HomeEnvironmentSelectorTestButton'
- tapOn:
    id: 'HeaderBackIcon'
- tapOn:
    id: 'HeaderEnvironmentIcon'
- tapOn:
    id: AdminScreenShowSurveyButton
- tapOn:
    id: SurveyRatingFormFieldIcon
    index: 4
- tapOn:
    id: SurveyTextareaFormFieldInput
- inputRandomText:
    length: 20
- runFlow:
    file: ./utils/tapToCloseKeyboard.yaml
    env:
      PARENT_ID: SurveyQuestion2
- scrollUntilVisible:
    element:
      id: DynamicFormSubmitButton
- tapOn:
    id: DynamicFormSubmitButton
- assertVisible:
    id: SurveyFeedbackFormSuccessAlert
