appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: ../shared/OpenModuleFromFreshApp.yaml
    env:
      ENVIRONMENT: Test
      MODULE: HomeContactModuleButton
- scrollUntilVisible:
    element:
      id: .*SurveyQuestion.*
- tapOn:
    id: SurveySelectionButtonsFormField
- scrollUntilVisible:
    element:
      id: DynamicFormSubmitButton
- tapOn:
    id: SurveyTextareaFormFieldInput
- inputRandomText:
    length: 20
- runFlow:
    file: ./utils/tapToCloseKeyboard.yaml
    env:
      PARENT_ID: SurveyQuestion2
- tapOn:
    id: DynamicFormSubmitButton
- assertVisible:
    id: SurveyFeedbackFormSuccessAlert
